2024-01-10T08:19:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7472091094 # 10
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 729 1152
* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 731 1154
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-01-10]

2024-01-09T16:19:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7463842139 # 8
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-09
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 729 1151
* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 729 1152
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-09]

2024-01-09T08:19:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7458396752 # 7
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-09
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 728 1150
* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 729 1151
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-09]

2024-01-08T16:19:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7450197408 # 5