@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-10T08:19:23Z",
+  "timestamp" : "2024-01-10T16:20:19Z",
   "count_outdated" : 1143,
   "uniques_outdated" : 724,
-  "count" : 1154,
+  "count" : 1155,
   "uniques" : 731,
   "clones" : [
     {
@@ -52,9 +52,9 @@
     },
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
