@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 4,
   "clones": [
     {
@@ -29,7 +29,7 @@
     },
     {
       "timestamp": "2024-01-10T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
