@@ -1,3 +1,12 @@
+2024-01-10T16:20:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7477781999 # 11
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
+* notice: last 14d: unq all: 4 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 724 1143 / 731 1154
+* notice: next accum: outdated-unq outdated-all / unq all: 724 1143 / 731 1155
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2024-01-10]
+
 2024-01-10T08:19:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7472091094 # 10
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
